chore: 迁移认证模块
