# internal/server/http.go
@@ -1,12 +1,13 @@
 package server
 
 import (
+	"edu-evaluation-backed/api/v1/auth"
 	"edu-evaluation-backed/api/v1/base_info/course"
 	"edu-evaluation-backed/api/v1/base_info/student"
 	"edu-evaluation-backed/api/v1/base_info/teacher"
 	eva_task2 "edu-evaluation-backed/api/v1/eva_task"
 	"edu-evaluation-backed/internal/conf"
-	"edu-evaluation-backed/internal/service/auth"
+	authSvc "edu-evaluation-backed/internal/service/auth"
 	"edu-evaluation-backed/internal/service/base_info"
 	"edu-evaluation-backed/internal/service/eva_task"
 
@@ -17,7 +18,7 @@ import (
 
 // NewHTTPServer new an HTTP server.
 func NewHTTPServer(c *conf.Server,
-	authService *auth.AuthService,
+	authService *authSvc.AuthService,
 	studentService *base_info.StudentService,
 	teacherService *base_info.TeacherService,
 	courseService *base_info.CourseService,
@@ -39,15 +40,13 @@ func NewHTTPServer(c *conf.Server,
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	b := srv.Route("/api/v1")
-	// 认证路由
-	b.POST("/auth/admin/login", authService.AdminLogin)
-	b.POST("/auth/student/login", authService.StudentLogin)
-	b.GET("/auth/student/info", authService.StudentInfo)
+	// 注册认证服务
+	auth.RegisterAuthHTTPServer(srv, authService)
 	// 上传路由
-	b.POST("/base-info/student/import", studentService.Import)
-	b.POST("/base-info/teacher/import", teacherService.Import)
-	b.POST("/base-info/course/import", courseService.Import)
+	b := srv.Route("/api/v1/base-info")
+	b.POST("/student/import", studentService.Import)
+	b.POST("/teacher/import", teacherService.Import)
+	b.POST("/course/import", courseService.Import)
 	student_i.RegisterStudentHTTPServer(srv, studentService)
 	teacher_i.RegisterTeacherHTTPServer(srv, teacherService)
 	course.RegisterCourseHTTPServer(srv, courseService)
