# openapi.yaml
@@ -3,19 +3,19 @@
 
 openapi: 3.0.3
 info:
-    title: Task API
+    title: Auth API
     version: 0.0.1
 paths:
-    /api/v1/task/change_status:
+    /api/v1/auth/admin/login:
         post:
             tags:
-                - Task
-            operationId: Task_ChangeStatus
+                - Auth
+            operationId: Auth_AdminLogin
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/ChangeTaskStatusReq'
+                            $ref: '#/components/schemas/api.v1.auth.AdminLoginReq'
                 required: true
             responses:
                 "200":
@@ -23,105 +23,13 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/ChangeTaskStatusResp'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /api/v1/task/create:
-        post:
-            tags:
-                - Task
-            operationId: Task_CreateTask
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/CreateTaskReq'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/CreateTaskResp'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /api/v1/task/detail:
+                                $ref: '#/components/schemas/api.v1.auth.AdminLoginResp'
+    /api/v1/auth/student/info:
         get:
             tags:
-                - Task
-            operationId: Task_Detail
+                - Auth
+            operationId: Auth_StudentInfo
             parameters:
-                - name: id
-                  in: query
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/TaskInfo'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /api/v1/task/list:
-        get:
-            tags:
-                - Task
-            operationId: Task_List
-            parameters:
-                - name: status
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: page
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: pageSize
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/GetTaskListResp'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /api/v1/task/student_task_detail:
-        get:
-            tags:
-                - Task
-            operationId: Task_StudentTaskDetail
-            parameters:
-                - name: taskId
-                  in: query
-                  schema:
-                    type: integer
-                    format: uint32
                 - name: stuNo
                   in: query
                   schema:
@@ -132,23 +40,17 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/StuTaskDetailRes'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /api/v1/task/submit_evaluation:
+                                $ref: '#/components/schemas/api.v1.auth.StudentInfoResp'
+    /api/v1/auth/student/login:
         post:
             tags:
-                - Task
-            operationId: Task_SubmitEvaluation
+                - Auth
+            operationId: Auth_StudentLogin
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/SubmitEvaluationReq'
+                            $ref: '#/components/schemas/api.v1.auth.StudentLoginReq'
                 required: true
             responses:
                 "200":
@@ -156,168 +58,65 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/SubmitEvaluationResp'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/api.v1.auth.StudentLoginResp'
 components:
     schemas:
-        ChangeTaskStatusReq:
+        api.v1.auth.AdminLoginReq:
             type: object
             properties:
-                id:
-                    type: integer
-                    format: int32
-                status:
-                    type: integer
-                    format: int32
-        ChangeTaskStatusResp:
+                username:
+                    type: string
+                password:
+                    type: string
+        api.v1.auth.AdminLoginResp:
             type: object
             properties:
                 message:
                     type: string
-        CourseInfo:
+        api.v1.auth.StudentData:
+            type: object
+            properties:
+                studentNo:
+                    type: string
+                name:
+                    type: string
+        api.v1.auth.StudentDetailInfo:
             type: object
             properties:
                 id:
-                    type: string
+                    type: integer
+                    format: uint32
                 name:
                     type: string
-                evaluationScore:
-                    type: integer
-                    format: int32
-                evaluationNum:
-                    type: integer
-                    format: int32
-                totalNum:
-                    type: integer
-                    format: int32
-                teacher:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/CourseInfo_TeacherInfo'
-        CourseInfo_TeacherInfo:
-            type: object
-            properties:
-                id:
+                sex:
                     type: string
-                name:
+                studentNo:
                     type: string
-                hasEvaluation:
-                    type: boolean
-        CreateTaskReq:
-            type: object
-            properties:
-                name:
+                idCardNo:
                     type: string
-                courseIds:
-                    type: array
-                    items:
-                        type: integer
-                        format: int32
-        CreateTaskResp:
+        api.v1.auth.StudentInfoResp:
             type: object
             properties:
                 message:
                     type: string
                 data:
-                    $ref: '#/components/schemas/CreateTaskResp_d'
-        CreateTaskResp_d:
+                    $ref: '#/components/schemas/api.v1.auth.StudentDetailInfo'
+        api.v1.auth.StudentLoginReq:
             type: object
             properties:
-                id:
+                stuNo:
                     type: string
-        GetTaskListResp:
-            type: object
-            properties:
-                message:
+                cardNo:
                     type: string
-                data:
-                    $ref: '#/components/schemas/GetTaskListResp_d'
-        GetTaskListResp_d:
-            type: object
-            properties:
-                tasks:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/TaskInfo'
-                total:
-                    type: string
-        GoogleProtobufAny:
-            type: object
-            properties:
-                '@type':
-                    type: string
-                    description: The type of the serialized message.
-            additionalProperties: true
-            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        Status:
-            type: object
-            properties:
-                code:
-                    type: integer
-                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
-                    format: int32
-                message:
-                    type: string
-                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
-                details:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/GoogleProtobufAny'
-                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
-            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
-        StuTaskDetailRes:
-            type: object
-            properties:
-                message:
-                    type: string
-                course:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/CourseInfo'
-        SubmitEvaluationReq:
-            type: object
-            properties:
                 taskId:
                     type: integer
                     format: uint32
-                courseId:
-                    type: integer
-                    format: uint32
-                teacherId:
-                    type: integer
-                    format: uint32
-                stuNo:
-                    type: string
-                detailScore:
-                    type: string
-                score:
-                    type: integer
-                    format: int32
-                comment:
-                    type: string
-        SubmitEvaluationResp:
+        api.v1.auth.StudentLoginResp:
             type: object
             properties:
                 message:
                     type: string
-        TaskInfo:
-            type: object
-            properties:
-                id:
-                    type: string
-                name:
-                    type: string
-                status:
-                    type: integer
-                    format: int32
-                course:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/CourseInfo'
+                data:
+                    $ref: '#/components/schemas/api.v1.auth.StudentData'
 tags:
-    - name: Task
+    - name: Auth
